--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="result">
         <p id="result-user-stat">User:</p>
-        <p id="result-comp-stat">Computer:</p>
+        <p id="result-comp-stat">Comp:</p>
         <p id="result-final-stat">Winner:</p>
       </div>
 
